# shiitake

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.server  Dockerfile.worker  README.md  mise.toml
.github/: dependabot.yml  release-drafter.yml
.github/scripts/: build-contributors.sh  check-version.sh
.github/workflows/: ci.yml  pages.yml  release-drafter.yml  release.yml  test.yml
clients/shiitake-py/: README.md  pyproject.toml
clients/shiitake-py/shiitake/: __init__.py  client.py
clients/shiitake-py/tests/: test_client.py  test_e2e.py
clients/shiitake-rs/: Cargo.toml
clients/shiitake-rs/src/: client.rs  lib.rs
docs/: docs.html  index.html
shiitake-server/: Cargo.toml
shiitake-server-api/: Cargo.toml
shiitake-server-api/src/: lib.rs
shiitake-server/src/: lib.rs  main.rs  metrics.rs  serve.rs  telemetry.rs
shiitake-server/src/http/: dispatch.rs  exec.rs  health.rs  mod.rs
shiitake-server/src/pool/: k8s_status.rs  mod.rs
shiitake-server/tests/: http_read.rs  oom_lookup.rs  pool_dispatch.rs
shiitake-worker/: Cargo.toml
shiitake-worker-api/: Cargo.toml
shiitake-worker-api/src/: capture.rs  lib.rs
shiitake-worker/src/: cgroup.rs  client.rs  exec.rs  main.rs  reset.rs
shiitake-worker/tests/: cancel.rs  happy_path.rs  restart_after.rs  timeout.rs
tests/: Dockerfile.worker  README.md  build.sh  lib.sh  run.sh  setup.sh  test_exec.py
tests/chart/: Chart.yaml  values.yaml
tests/chart/templates/: otel-configmap.yaml  otel-deployment.yaml  otel-service.yaml  shiitake-deployment.yaml  shiitake-rbac.yaml
