[package]
name = "shiitake-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["ws"] }
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["latest"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "signal", "sync", "time"] }
libc = "0.2"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
shiitake-worker-api = { path = "../shiitake-worker-api" }
# The HTTP API types it serves. Pure types — no client/transport deps.
shiitake-server-api = { path = "../shiitake-server-api" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "auth"] }
opentelemetry = { version = "0.32", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "metrics",
    # All OTLP transports, selected at runtime by OTEL_EXPORTER_OTLP_PROTOCOL.
    # Plaintext only (the standard in-cluster pattern: the app ships to a local
    # collector, which forwards with TLS). Enabling reqwest/tonic rustls here
    # drags in aws-lc-rs alongside ring, which both breaks the static musl link
    # and leaves rustls unable to pick a CryptoProvider.
    "http-proto",
    "http-json",
    "reqwest-blocking-client",
    "grpc-tonic",
] }
tracing-opentelemetry = "0.33"

[dev-dependencies]
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
