[package]
name = "shiitake-worker-api"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
libc = "0.2"
derive_more = { version = "2", features = ["display"] }

[dev-dependencies]
serde_json = "1.0"
