[package]
name = "shiitake-worker"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nix = { version = "0.31", features = ["resource", "signal", "process", "user"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
libc = "0.2"
shiitake-worker-api = { path = "../shiitake-worker-api" }

[dev-dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["net"] }
tempfile = "3"
