[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shiitake-py"
version = "0.1.2"
description = "Python client for the shiitake command-dispatch HTTP API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["shiitake"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
